--- a/docker-alpine/Dockerfile
+++ b/docker-alpine/Dockerfile
@@ -59,7 +59,7 @@ RUN cd /root \
 
 # Download latest version of the services
 RUN cd /root \
-&& sudo curl -s -H "Cache-Control: no-cache" -o "servicesd.sh" "https://raw.githubusercontent.com/escaparrac/IRL-relay-SRT-RTMP/main/servicesd.sh" && sudo chmod +x servicesd.sh
+&& sudo curl -s -H "Cache-Control: no-cache" -o "servicesa.sh" "https://raw.githubusercontent.com/escaparrac/IRL-relay-SRT-RTMP/main/servicesa.sh" && sudo chmod +x servicesa.sh
 
 # Script to execute on boot
-CMD ./root/servicesd.sh
+CMD ./root/servicesa.sh
